@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-13T01:49:51Z",
+  "timestamp" : "2022-07-13T08:23:23Z",
   "count_outdated" : 2225,
   "uniques_outdated" : 475,
   "count" : 2282,
-  "uniques" : 505,
+  "uniques" : 506,
   "clones" : [
     {
       "timestamp": "2022-06-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
