@@ -1,3 +1,10 @@
+2022-07-13T08:23:23Z:
+* notice: last 14d: unq all: 15 57
+* notice: prev accum: outdated-unq outdated-all / unq all: 475 2225 / 505 2282
+* notice: next accum: outdated-unq outdated-all / unq all: 475 2225 / 506 2282
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-29 2022-07-13]
+
 2022-07-13T01:49:51Z:
 * notice: last 14d: unq all: 15 57
 * notice: prev accum: outdated-unq outdated-all / unq all: 475 2225 / 505 2281
